[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0"
authors = ["Sarrus"]

[profile.dev]
debug = 2

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
strip = true
rpath = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[workspace.dependencies]
preprocessor = { path = "./crates/preprocessor" }
profile = { path = "./crates/profile" }
sourcepawn-studio = { path = "./crates/sourcepawn-studio" }
syntax = { path = "./crates/syntax" }
vfs = { path = "./crates/vfs" }
vfs-notify = { path = "./crates/vfs-notify" }
base-db = { path = "./crates/base-db" }
ide = { path = "./crates/ide" }
ide-diagnostics = { path = "./crates/ide-diagnostics" }
ide-db = { path = "./crates/ide-db" }
hir = { path = "./crates/hir" }
hir-def = { path = "./crates/hir-def" }
flycheck = { path = "./crates/flycheck" }
stdx = { path = "./crates/stdx" }
paths = { path = "./crates/paths" }
test-utils = { path = "./crates/test-utils" }
completion-data = { path = "./crates/completion-data" }
lsp-server = "0.7.8"
crossbeam = "0.8.4"
dashmap = "6.1.0"
threadpool = "1.8.1"
walkdir = "2.5.0"
log = "0.4.27"
rowan = "0.16.1"
lazy_static = "1.5.0"
regex = "1.11.1"
notify = "8.0.0"
fxhash = "0.2.1"
tempfile = "3.20.0"
clap = { version = "4.5.40", features = ["derive"] }
fern = "0.7.1"
humantime = "2.2.0"
sourcepawn_lexer = "0.3.0"
sentry = "0.41.0"
parking_lot = "0.12.4"
lsp-types = { version = "0.94.1", features = ["proposed"] }
anyhow = "1.0.98"
tree-sitter = "0.24.7"
streaming-iterator = "0.1.9"
tree-sitter-sourcepawn = "0.7.8"
strip_bom = "1.0.0"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
nohash-hasher = "0.2.0"
indexmap = "2.10.0"
salsa = "0.17.0-pre.2"
tracing = "0.1.41"
smol_str = "0.2.2"
la-arena = "^0.3.1"
smallvec = { version = "1.10.0", features = [
  "const_new",
  "union",
  "const_generics",
] }
dunce = "1.0.4"
always-assert = "0.1.2"
itertools = "0.11.0"
bitflags = "2.4.2"
deepsize = "0.2.0"
once_cell = "1.19.0"
text-size = "1.1.1"
insta = { version = "1.28.0", features = ["glob", "redactions", "json"] }

[workspace.dependencies.uuid]
version = "1.3.0"
features = ["v4"]
